# Coursework

./: README.md  pyproject.toml
data/: report_spending_by_category_20241102_133827.json
src/: data_processing.py  external_api.py  main.py  reports.py  services.py  utils.py  views.py
test/: test_main.py  test_services.py  tets_reports.py
tests/: test_main.py  test_services.py  tets_reports.py
